--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,15 @@
-# This is a basic workflow to help you get started with Actions
-
 name: PR master check
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   pull_request:
     branches: [ master ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  comment:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - uses: marocchino/sticky-pull-request-comment@v1.4.0
       with:
-        repo-token: "${{ secrets.GITHUB_TOKEN }}"
-        # comment message
+        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         message: |
-          Warning: This pull request is targeting master.
-        # set secrets.GITHUB_TOKEN here
-       
+          Warning - This pull request is targeting master.
